[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scene08.gd" type="Script" id=1]
[ext_resource path="res://art/info_layer_background.png" type="Texture" id=2]

[sub_resource type="TileSet" id=1]
0/name = "info_layer_background.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Scene08" type="Node2D"]
script = ExtResource( 1 )

[node name="TextBackground" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 917521, 0, 0, 917525, 0, 0, 917529, 0, 0, 917533, 0, 0, 917537, 0, 0, 917541, 0, 0, 917545, 0, 0, 1179665, 0, 0, 1179669, 0, 0, 1179673, 0, 0, 1179677, 0, 0, 1179681, 0, 0, 1179685, 0, 0, 1179689, 0, 0, 1441809, 0, 0, 1441813, 0, 0, 1441817, 0, 0, 1441821, 0, 0, 1441825, 0, 0, 1441829, 0, 0, 1441833, 0, 0, 1703953, 0, 0, 1703957, 0, 0, 1703961, 0, 0, 1703965, 0, 0, 1703969, 0, 0, 1703973, 0, 0, 1703977, 0, 0, 1835025, 0, 0, 1835029, 0, 0, 1835033, 0, 0, 1835037, 0, 0, 1835041, 0, 0, 1835045, 0, 0, 1835049, 0, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextBackground"]
margin_left = 272.0
margin_top = 224.0
margin_right = 720.0
margin_bottom = 477.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="TextBackground/VBoxContainer"]
margin_right = 448.0
margin_bottom = 14.0
alignment = 1

[node name="NameLabel" type="Label" parent="TextBackground/VBoxContainer/HBoxContainer2"]
margin_left = 183.0
margin_right = 264.0
margin_bottom = 14.0
text = "Employment"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuContainer" type="HBoxContainer" parent="TextBackground/VBoxContainer"]
margin_top = 18.0
margin_right = 448.0
margin_bottom = 230.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextBackground/VBoxContainer/MainMenuContainer"]
margin_right = 222.0
margin_bottom = 212.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="CompaniesButtonContainer" type="VBoxContainer" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer"]
margin_right = 149.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompanyContainer" type="VBoxContainer" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer"]
margin_right = 149.0
margin_bottom = 212.0

[node name="ZMartDiscount" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_right = 149.0
margin_bottom = 20.0
text = "Z-Mart Discount"

[node name="MonolithBurger" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 24.0
margin_right = 149.0
margin_bottom = 44.0
text = "Monolith Burger"

[node name="QTClothing" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 48.0
margin_right = 149.0
margin_bottom = 68.0
text = "QT Clothing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocketCityAppliance" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 72.0
margin_right = 149.0
margin_bottom = 92.0
text = "Socket City Appliance"

[node name="HiTechUniversity" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 96.0
margin_right = 149.0
margin_bottom = 116.0
text = "Hi-Tech University"

[node name="Factory" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 120.0
margin_right = 149.0
margin_bottom = 140.0
text = "Factory"

[node name="Bank" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 144.0
margin_right = 149.0
margin_bottom = 164.0
text = "Bank"

[node name="BlacksMarket" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 168.0
margin_right = 149.0
margin_bottom = 188.0
text = "Black's Market"

[node name="RentOffice" type="Button" parent="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer"]
margin_top = 192.0
margin_right = 149.0
margin_bottom = 212.0
text = "Rent Office"

[node name="Text Box" type="HBoxContainer" parent="TextBackground/VBoxContainer/MainMenuContainer"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 212.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="InfoLabelBox" type="Label" parent="TextBackground/VBoxContainer/MainMenuContainer/Text Box"]
margin_top = 99.0
margin_right = 222.0
margin_bottom = 113.0
size_flags_horizontal = 3
text = "Default Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JobsMenuContainer" type="HBoxContainer" parent="TextBackground/VBoxContainer"]
visible = false
margin_top = 234.0
margin_right = 448.0
margin_bottom = 253.0
size_flags_vertical = 3

[node name="JobsContainer" type="HBoxContainer" parent="TextBackground/VBoxContainer/JobsMenuContainer"]
margin_right = 222.0
margin_bottom = 19.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="Text Box" type="HBoxContainer" parent="TextBackground/VBoxContainer/JobsMenuContainer"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 19.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="JobsLabelBox" type="Label" parent="TextBackground/VBoxContainer/JobsMenuContainer/Text Box"]
margin_top = 2.0
margin_right = 222.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "Default Text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="TextBackground"]
margin_left = 648.0
margin_top = 476.0
margin_right = 694.0
margin_bottom = 496.0
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/ZMartDiscount" to="." method="on_company_button_pressed" binds= [ "scene03" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/MonolithBurger" to="." method="on_company_button_pressed" binds= [ "scene04" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/QTClothing" to="." method="on_company_button_pressed" binds= [ "scene05" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/SocketCityAppliance" to="." method="on_company_button_pressed" binds= [ "scene06" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/HiTechUniversity" to="." method="on_company_button_pressed" binds= [ "scene07" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/Factory" to="." method="on_company_button_pressed" binds= [ "scene09" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/Bank" to="." method="on_company_button_pressed" binds= [ "scene10" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/BlacksMarket" to="." method="on_company_button_pressed" binds= [ "scene11" ]]
[connection signal="pressed" from="TextBackground/VBoxContainer/MainMenuContainer/HBoxContainer/CompaniesButtonContainer/CompanyContainer/RentOffice" to="." method="on_company_button_pressed" binds= [ "scene13" ]]
[connection signal="pressed" from="TextBackground/DoneButton" to="." method="on_done_clicked"]
